fix scrollbar on firefox

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: Consolas, monaco, monospace;
+  scrollbar-width: none;
 }
 
 section {
